# SolanaContract

./: Anchor.toml  README  README.md  package.json
programs/solana-raffle/: Cargo.toml
programs/solana-raffle/src/: lib.rs
programs/solana-raffle/src/instructions/: init.rs  mod.rs  raffle.rs
programs/solana-raffle/src/state/: global_state.rs  mod.rs  token.rs
