[package]
name = "solana-raffle"
version = "0.1.0"
description = "surge.exchange solana settlement program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_raffle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
ahash = "=0.8.5"
anchor-spl = { version = "0.29.0", features = ["metadata"] }
solana-program = "=1.17.28"
